k8s/java_ui_deploy.yml

apiVersion: v1
kind: Service
metadata:
  name: java-svc
spec:
  selector:
    app: java-ui
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 32294
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: java-ui
  name: java-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-ui
  template:
    metadata:
      labels:
        app: java-ui
    spec:
      containers:
      - image: 669016063732.dkr.ecr.eu-west-2.amazonaws.com/simple-java-app
        imagePullPolicy: IfNotPresent
        name: simple-java-app
       
        ports:
        - containerPort: 8080
